Significant and compatibility-breaking changes.

Version 0.4.4:
	- Added instances for Identity, Monoid.Dual/All/Any/Sum/Product/Alt, Semigroup.Min/Max/First/Last/Option 

Version 0.4.2:
	- Fixed links in README.md
	- Added multiple stack.yaml files for different LTS

Version 0.4:
    - Compatibility with ghc 8.8.3
	- Changed namespace from Data.Flat to Flat
	- Addtional Flat Instances for some common packages: array, base, bytestring, containers, dlist, text, unordered-containers, vector
	- Additional doctests, with a static version that can run without ghci and therefore also under ghcjs/eta (run it with stack test :doc-static)
	- Many minor changes

Version 0.3.4:
	- Redisegned Generics-based instance generation (Data.Flat.Class) to reduce compilation time and improve encoding and decoding performance
	- Fixed GHCJS Double bug and tested GHCJS with full test suite

Version 0.3.2:
	- Tested with ghc 8.2.1
	- Dropped dependencies on the 'cpu', 'derive' and 'tasty' packages to make it compatible with the Eta compiler (https://github.com/typelead/eta)

Version 0.3:
	- Removed 'flatStrict' and 'unflatStrict' (use 'flat' and 'unflat' instead that also encode/decode strictly)
	- `unflatWith` now takes a decoder for the unpadded value (previously it expected a padded decoder) and decodes the padded value
	- Added some decoding primitives
	- Added Data.ByteString.Convert