@@ -13,6 +13,7 @@ Version 0.4:
 	- Addtional Flat Instances for some common packages: array, base, bytestring, containers, dlist, text, unordered-containers, vector
 	- Additional doctests, with a static version that can run without ghci and therefore also under ghcjs/eta (run it with stack test :doc-static)
 	- Many minor changes
+	- Data.Seq.Seq is serialised as a List (previously was serialised as an Array)
 
 Version 0.3.4:
 	- Redisegned Generics-based instance generation (Data.Flat.Class) to reduce compilation time and improve encoding and decoding performance
